# lcc

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: lcc.h  lcc_config.h.in  lcc_error.h  lcc_pack.h  lcc_priv.h
lcc/: lcc
src/: .lcc_configuration.c.swp  auth.c  lcc.c  lcc_auth.c  lcc_comm.c  lcc_configuration.c  lcc_convert.c  lcc_error.c  lcc_io.c  lcc_list.c  lcc_mem.c  lcc_net.c  lcc_protocol.c  lcc_result.c  lcc_stmt.c  protocol.c
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  sys1  sys1.c
test/include/: lcc_test.h
